--- a/src/app/ArticleComponent/article.component.scss
+++ b/src/app/ArticleComponent/article.component.scss
@@ -5,23 +5,51 @@
   border-radius: 10px;
   background: rgb(241, 239, 239);
   flex-wrap: wrap;
+  flex-direction: column;
   padding: 1rem;
   margin: auto;
   border: 2px solid black;
   justify-content: center;
   align-items: center;
+
+  .card-title {
+    size: 1em;
+    color: black;
+    flex-wrap: wrap;
+    text-align: center;
+  }
+
+  .card-text {
+    size: 0.75em;
+    color: black;
+    flex-wrap: wrap;
+    text-align: center;
+  }
+
+  img {
+    width: 100%;
+  }
 }
 
-.card-title {
-  size: 1em;
-  color: black;
-  flex-wrap: wrap;
-  text-align: center;
+button {
+  padding: 0.5rem;
+  size: 14px;
+  border-radius: 10px;
+  border: 1px solid rgb(94, 145, 175);
+  background-color: rgb(94, 145, 175);
 }
 
-.card-text {
-  size: 0.75em;
-  color: black;
-  flex-wrap: wrap;
-  text-align: center;
+.comment {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1rem;
+}
+
+.article-comment {
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  padding: 0.5rem;
+  margin-top: 1rem;
 }
