--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -334,5 +334,6 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+<h1>{{ title }}</h1>
 <app-article-component></app-article-component>
 <router-outlet />
