Used directives - articles can be published at will and like counter created

--- a/src/app/ArticleComponent/article.component.scss
+++ b/src/app/ArticleComponent/article.component.scss
@@ -37,6 +37,10 @@ button {
   border-radius: 10px;
   border: 1px solid rgb(94, 145, 175);
   background-color: rgb(94, 145, 175);
+
+  &:hover {
+    zoom: 1.25;
+  }
 }
 
 .comment {
