--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,78 @@
 h1 {
+  text-align: center;
+  padding: 1rem;
+}
+
+h5 {
+    margin: 0.5rem;;
+}
+.card-main {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  margin: 1rem;
+}
+
+.card {
+  display: flex;
+  flex-wrap: wrap;
+  width: 300px;
+  border-radius: 10px;
+  background: rgb(241, 239, 239);
+  flex-direction: column;
+  padding: 1rem;
+  margin: auto;
+  border: 2px solid black;
+  justify-content: center;
+  align-items: center;
+
+  &:hover {
+    scale: 1.05;
+  }
+
+  .card-title {
+    size: 1em;
+    color: black;
+    flex-wrap: wrap;
     text-align: center;
-    padding: 1rem;
+  }
+
+  .card-text {
+    size: 0.75em;
+    color: black;
+    flex-wrap: wrap;
+    text-align: center;
+  }
+
+  img {
+    width: 100%;
+  }
+}
+
+.comment {
+  padding: 0.5rem;
+}
+
+input {
+  border-radius: 10px;
+}
+
+.article-comment {
+  width: 90%;
+  padding: 0.5rem;
+  margin-top: 1rem;
+}
+
+.popular-article {
+  font-size: 1.5em;
+  text-shadow: 2px 2px 5px gray;
+  font-weight: bold;
 }
