--- a/src/app/article-page/article-page.component.html
+++ b/src/app/article-page/article-page.component.html
@@ -1,11 +1,9 @@
+@if(article) {
 <div class="card">
   <h2 class="card-title">{{ article.title }}</h2>
   <img [src]="article.image" [alt]="article.image" />
   <h5>{{ article.author }}</h5>
-  <p class="card-text" *ngIf="article.isPublished">{{ article.content }}</p>
-  <button (click)="togglePublication()">
-    {{ article.isPublished ? "Dépublier" : "Publier" }}
-  </button>
+  <p class="card-text">{{ article.content }}</p>
 
   <div class="comment">
     <label for="title-comment"
@@ -20,3 +18,4 @@
     <p *ngIf="article.comment">Commentaires : {{ article.comment }}</p>
   </div>
 </div>
+}
