--- a/src/app/article-page/article-page.component.scss
+++ b/src/app/article-page/article-page.component.scss
@@ -53,7 +53,8 @@ button {
 .article-comment {
   justify-content: center;
   align-items: center;
-  width: 90%;
+  width: 95%;
   padding: 0.5rem;
   margin-top: 1rem;
+  border-radius: 10px;
 }
