--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -79,7 +79,7 @@
         required
         email
       />
-      <!-- Messages d'erreurs de l'input firstname -->
+      <!-- Messages d'erreurs de l'input email -->
       @if (email.errors && contactForm.submitted) {
       <div class="error-message">
         @if (email.errors['required']) {
